[gd_scene load_steps=21 format=3 uid="uid://dfm0mdvmbgdv2"]

[ext_resource type="Script" path="res://loja.gd" id="1_2ofpd"]
[ext_resource type="Texture2D" uid="uid://diwyarq17rwwc" path="res://Assets/formatos/pp_clock.png" id="1_wfg0a"]
[ext_resource type="PackedScene" uid="uid://eo4h62aq2wtt" path="res://Audio/ui_sounds.tscn" id="2_2soxn"]
[ext_resource type="Texture2D" uid="uid://xuoatwwa0ci4" path="res://Assets/formatos/upgrade_normal.png" id="2_m2u30"]
[ext_resource type="Texture2D" uid="uid://0vfd33ej50s7" path="res://Assets/formatos/upgrade_comprado.png" id="3_4u6ew"]
[ext_resource type="Texture2D" uid="uid://d0sciphnw6au8" path="res://Assets/itens/inv_itens/up_vida.png" id="5_lssvn"]
[ext_resource type="PackedScene" uid="uid://cv57l8cgtgr3v" path="res://Generico/confirmacao.tscn" id="7_ga5l3"]
[ext_resource type="Theme" uid="uid://0a7264asjqtn" path="res://Assets/font/TextFont.tres" id="8_2vibf"]
[ext_resource type="PackedScene" uid="uid://bx43gpgmorkah" path="res://text_edit_sara.tscn" id="8_pa2xe"]
[ext_resource type="Texture2D" uid="uid://suvxqfijb8c8" path="res://Assets/itens/inv_itens/up_defense.png" id="9_wowyl"]
[ext_resource type="Texture2D" uid="uid://dm2shhiwn14dg" path="res://Assets/itens/inv_itens/up_speed.png" id="10_207fb"]
[ext_resource type="AudioStream" uid="uid://new414htllf2" path="res://Audio/btns_loja.mp3" id="10_ihp2p"]
[ext_resource type="AudioStream" uid="uid://begye0eu0r7a5" path="res://Audio/denied.mp3" id="11_7e65p"]
[ext_resource type="Texture2D" uid="uid://cr8202tvb67qk" path="res://Assets/itens/inv_itens/up_sorte.png" id="11_kxaon"]
[ext_resource type="Texture2D" uid="uid://d3rhbc7hmwsbb" path="res://Assets/itens/inv_itens/up_dano.png" id="12_dhe6i"]
[ext_resource type="AudioStream" uid="uid://jxjvvcl2awqg" path="res://Audio/loja_bgm.mp3" id="12_rphgk"]
[ext_resource type="Texture2D" uid="uid://badi237gqp1ct" path="res://Assets/itens/inv_itens/up_chance_critica.png" id="13_plfm1"]

[sub_resource type="Curve" id="Curve_0dk7y"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.126214, 1), 0.0, 0.0, 0, 0, Vector2(0.194175, 0.263736), 0.0, 0.0, 0, 0, Vector2(0.286408, 0.56044), 0.0, 0.0, 0, 0, Vector2(0.466019, 0.923077), 0.0, 0.0, 0, 0, Vector2(0.684466, 1), 0.0, 0.0, 0, 0, Vector2(0.912621, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 8

[sub_resource type="CurveTexture" id="CurveTexture_k1q3s"]
curve = SubResource("Curve_0dk7y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g0h60"]
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 128.0
radial_velocity_min = -123.98
radial_velocity_max = 157.01
gravity = Vector3(0, 98, 0)
radial_accel_min = -21.49
radial_accel_max = 44.63
scale_max = 3.0
scale_curve = SubResource("CurveTexture_k1q3s")
color = Color(1, 1, 0.243137, 1)

[node name="Loja" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_2ofpd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.140886, 0.0150334, 0.249895, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(651, 459)
scale = Vector2(10, 10)
amount = 200
process_material = SubResource("ParticleProcessMaterial_g0h60")

[node name="UiSounds" parent="." instance=ExtResource("2_2soxn")]
root_path = NodePath("..")

[node name="BG" type="CanvasLayer" parent="."]

[node name="descricoes" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 108.0
offset_top = -177.0
offset_right = -755.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
alignment = 1

[node name="nome_up" type="Label" parent="descricoes"]
layout_mode = 2
theme = ExtResource("8_2vibf")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextEdit" parent="descricoes" instance=ExtResource("8_pa2xe")]
layout_mode = 2
size_flags_vertical = 3
text = "sadsads
"

[node name="upgrades" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -727.0
offset_top = -221.5
offset_bottom = 221.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 65
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="upgrades"]
layout_mode = 2
size_flags_horizontal = 8

[node name="categoria" type="HBoxContainer" parent="upgrades/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 5
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="voltar_menu" type="Button" parent="upgrades/VBoxContainer/categoria"]
texture_filter = 1
layout_mode = 2
text = "Voltar"

[node name="player_upgrades" type="Button" parent="upgrades/VBoxContainer/categoria"]
layout_mode = 2
text = "Player Icon
"

[node name="deltatime_upgrades" type="Button" parent="upgrades/VBoxContainer/categoria"]
layout_mode = 2
disabled = true
text = "DeltaTime Icon
"

[node name="mapa_upgrades" type="Button" parent="upgrades/VBoxContainer/categoria"]
layout_mode = 2
text = "Map Icons
"

[node name="p_upgrades" type="HBoxContainer" parent="upgrades/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="set_1" type="VBoxContainer" parent="upgrades/VBoxContainer/p_upgrades"]
layout_mode = 2

[node name="up_vida" type="TextureButton" parent="upgrades/VBoxContainer/p_upgrades/set_1"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
mouse_filter = 2
texture_normal = ExtResource("5_lssvn")
texture_hover = ExtResource("1_wfg0a")
texture_focused = ExtResource("1_wfg0a")
stretch_mode = 0

[node name="upbar_vida" type="TextureProgressBar" parent="upgrades/VBoxContainer/p_upgrades/set_1"]
layout_mode = 2
max_value = 5.0
texture_under = ExtResource("2_m2u30")
texture_progress = ExtResource("3_4u6ew")
tint_under = Color(1, 0.940905, 0.936234, 0.780392)

[node name="up_resistencia" type="TextureButton" parent="upgrades/VBoxContainer/p_upgrades/set_1"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
mouse_filter = 2
texture_normal = ExtResource("9_wowyl")
texture_hover = ExtResource("1_wfg0a")
texture_focused = ExtResource("1_wfg0a")
stretch_mode = 0

[node name="upbar_resistencia" type="TextureProgressBar" parent="upgrades/VBoxContainer/p_upgrades/set_1"]
layout_mode = 2
max_value = 5.0
texture_under = ExtResource("2_m2u30")
texture_progress = ExtResource("3_4u6ew")
tint_under = Color(1, 0.940905, 0.936234, 0.780392)

[node name="set_2" type="VBoxContainer" parent="upgrades/VBoxContainer/p_upgrades"]
layout_mode = 2

[node name="up_velocidade" type="TextureButton" parent="upgrades/VBoxContainer/p_upgrades/set_2"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
mouse_filter = 2
texture_normal = ExtResource("10_207fb")
texture_hover = ExtResource("1_wfg0a")
texture_focused = ExtResource("1_wfg0a")
stretch_mode = 0

[node name="upbar_velocidade" type="TextureProgressBar" parent="upgrades/VBoxContainer/p_upgrades/set_2"]
layout_mode = 2
max_value = 5.0
texture_under = ExtResource("2_m2u30")
texture_progress = ExtResource("3_4u6ew")
tint_under = Color(1, 0.940905, 0.936234, 0.780392)

[node name="up_sorte" type="TextureButton" parent="upgrades/VBoxContainer/p_upgrades/set_2"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
mouse_filter = 2
texture_normal = ExtResource("11_kxaon")
texture_hover = ExtResource("1_wfg0a")
texture_focused = ExtResource("1_wfg0a")
stretch_mode = 0

[node name="upbar_sorte" type="TextureProgressBar" parent="upgrades/VBoxContainer/p_upgrades/set_2"]
layout_mode = 2
max_value = 5.0
texture_under = ExtResource("2_m2u30")
texture_progress = ExtResource("3_4u6ew")
tint_under = Color(1, 0.940905, 0.936234, 0.780392)

[node name="set_3" type="VBoxContainer" parent="upgrades/VBoxContainer/p_upgrades"]
layout_mode = 2

[node name="up_dano" type="TextureButton" parent="upgrades/VBoxContainer/p_upgrades/set_3"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
mouse_filter = 2
texture_normal = ExtResource("12_dhe6i")
texture_hover = ExtResource("1_wfg0a")
texture_focused = ExtResource("1_wfg0a")
stretch_mode = 0

[node name="upbar_dano" type="TextureProgressBar" parent="upgrades/VBoxContainer/p_upgrades/set_3"]
layout_mode = 2
max_value = 5.0
texture_under = ExtResource("2_m2u30")
texture_progress = ExtResource("3_4u6ew")
tint_under = Color(1, 0.940905, 0.936234, 0.780392)

[node name="up_chance_critica" type="TextureButton" parent="upgrades/VBoxContainer/p_upgrades/set_3"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
mouse_filter = 2
texture_normal = ExtResource("13_plfm1")
texture_hover = ExtResource("1_wfg0a")
texture_focused = ExtResource("1_wfg0a")
stretch_mode = 0

[node name="upbar_chance_critica" type="TextureProgressBar" parent="upgrades/VBoxContainer/p_upgrades/set_3"]
layout_mode = 2
max_value = 5.0
texture_under = ExtResource("2_m2u30")
texture_progress = ExtResource("3_4u6ew")
tint_under = Color(1, 0.940905, 0.936234, 0.780392)

[node name="dt_upgrades" type="HBoxContainer" parent="upgrades/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="mapa_upgrades" type="HBoxContainer" parent="upgrades/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="confirmacao" parent="." instance=ExtResource("7_ga5l3")]
visible = false

[node name="btn_upgrade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ihp2p")
volume_db = -20.0
bus = &"sfx"

[node name="moedas" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.996094
anchor_top = 0.003125
anchor_right = 0.996094
anchor_bottom = 0.003125
offset_left = -155.0
offset_bottom = 32.0
grow_horizontal = 0
theme = ExtResource("8_2vibf")
theme_override_colors/font_color = Color(0.945137, 0.833978, 0.325354, 1)
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="denied" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_7e65p")
volume_db = -20.0
bus = &"sfx"

[node name="loja_bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_rphgk")
volume_db = -20.0
bus = &"bgm"

[connection signal="focus_entered" from="descricoes/nome_up" to="." method="_on_nome_up_focus_entered"]
[connection signal="focus_entered" from="descricoes/TextEdit" to="." method="_on_text_edit_focus_entered"]
[connection signal="pressed" from="upgrades/VBoxContainer/categoria/voltar_menu" to="." method="_on_voltar_menu_pressed"]
[connection signal="focus_entered" from="upgrades/VBoxContainer/p_upgrades/set_1/up_vida" to="." method="_on_up_vida_focus_entered"]
[connection signal="pressed" from="upgrades/VBoxContainer/p_upgrades/set_1/up_vida" to="." method="_on_up_vida_pressed"]
[connection signal="focus_entered" from="upgrades/VBoxContainer/p_upgrades/set_1/up_resistencia" to="." method="_on_up_resistencia_focus_entered"]
[connection signal="pressed" from="upgrades/VBoxContainer/p_upgrades/set_1/up_resistencia" to="." method="_on_up_resistencia_pressed"]
[connection signal="focus_entered" from="upgrades/VBoxContainer/p_upgrades/set_2/up_velocidade" to="." method="_on_up_velocidade_focus_entered"]
[connection signal="pressed" from="upgrades/VBoxContainer/p_upgrades/set_2/up_velocidade" to="." method="_on_up_velocidade_pressed"]
[connection signal="focus_entered" from="upgrades/VBoxContainer/p_upgrades/set_2/up_sorte" to="." method="_on_up_sorte_focus_entered"]
[connection signal="pressed" from="upgrades/VBoxContainer/p_upgrades/set_2/up_sorte" to="." method="_on_up_sorte_pressed"]
[connection signal="focus_entered" from="upgrades/VBoxContainer/p_upgrades/set_3/up_dano" to="." method="_on_up_dano_focus_entered"]
[connection signal="pressed" from="upgrades/VBoxContainer/p_upgrades/set_3/up_dano" to="." method="_on_up_dano_pressed"]
[connection signal="focus_entered" from="upgrades/VBoxContainer/p_upgrades/set_3/up_chance_critica" to="." method="_on_up_chance_critica_focus_entered"]
[connection signal="pressed" from="upgrades/VBoxContainer/p_upgrades/set_3/up_chance_critica" to="." method="_on_up_chance_critica_pressed"]
[connection signal="finished" from="loja_bgm" to="." method="_on_loja_bgm_finished"]
